add advantages section

--- a/#source/style.scss
+++ b/#source/style.scss
@@ -953,3 +953,115 @@ body {
         row-gap: 20px;
     }
 }
+
+.page {
+
+    // .page__advantages
+
+    &__advantages {
+        padding-top: 100px;
+        padding-bottom: 100px;
+
+        @media(max-width: 991.98px) {
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+
+        @media(max-width: 767.98px) {
+            padding-top: 30px;
+            padding-bottom: 30px;
+        }
+    }
+}
+
+.advantages {
+
+    // .advantages__container
+
+    &__container {
+        display: flex;
+        column-gap: 2.5%;
+        /* 32/1280 */
+        row-gap: 40px;
+    }
+
+    // .advantages__items
+
+    &__items {
+        flex: 1 1 auto;
+        display: grid;
+        gap: 32px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    // .advantages__item
+
+    &__item {
+        padding: 40px;
+        background-color: rgba(129, 129, 139, 0.1);
+        border-radius: 30px;
+    }
+
+    // .advantages__value
+
+    &__value {
+        font-weight: 500;
+        font-size: 52px;
+        line-height: 119.230769%;
+        /* 62/52 */
+        color: #ffffff;
+
+        &:not(:last-child) {
+            margin-bottom: 32px;
+        }
+    }
+
+    // .advantages__text
+
+    &__text {
+        line-height: 150%;
+        /* 27/18 */
+        max-width: 270px;
+    }
+
+    // .advantages__image
+
+    &__image {
+        align-self: flex-end;
+        flex: 0 0 39.0625%;
+        /* 500/1280 */
+        overflow: hidden;
+        border-radius: 0% 68% 60% 60% / 0% 68% 50% 50%;
+
+        img {
+            max-width: 100%;
+            transform: scale(1.01);
+        }
+    }
+}
+
+@media(max-width:991.98px) {
+    .advantages__container {
+        flex-direction: column;
+    }
+
+    .advantages__image {
+        align-self: center;
+    }
+}
+
+@media(max-width:650px) {
+    .advantages__items {
+        grid-template-columns: auto;
+        gap: 20px;
+    }
+
+    .advantages__text {
+        max-width: none;
+    }
+
+    .advantages__container {
+        gap: 30px;
+    }
+}
