--- a/#source/style.scss
+++ b/#source/style.scss
@@ -1300,10 +1300,598 @@ body {
 
         &__button {
             align-self: flex-start;
+            width: 100%;
         }
 
         &__item {
             padding: 30px 20px;
         }
+    }
+}
+
+.page {
+
+    // .page__blog
+
+    &__blog {
+        padding-top: 100px;
+        padding-bottom: 100px;
+
+        @media(max-width: 991.98px) {
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+
+        @media(max-width: 767.98px) {
+            padding-top: 30px;
+            padding-bottom: 30px;
+        }
+    }
+}
+
+.blog {
+
+    // .blog__container
+
+    &__container {}
+
+    // .blog__content
+
+    &__content {
+        &:not(:last-child) {
+            margin-bottom: 64px;
+
+            @media(max-width: 991.98px) {
+                margin-bottom: 40px;
+            }
+
+            @media(max-width: 767.98px) {
+                margin-bottom: 30px;
+            }
+        }
+    }
+
+    // .blog__label
+
+    &__label {
+        &:not(:last-child) {
+            margin-bottom: 24px;
+        }
+    }
+
+    // .blog__title
+
+    &__title {
+        max-width: 400px;
+        font-size: 52px;
+        line-height: 119.230769%;
+        /* 62/52 */
+        color: #FFFFFF;
+        font-weight: 500;
+
+        &:not(:last-child) {
+            margin-bottom: 12px;
+        }
+
+        @media(max-width: 991.98px) {
+            font-size: 44px;
+        }
+
+        @media(max-width: 767.98px) {
+            font-size: 32px;
+        }
+    }
+
+    // .blog__body
+
+    &__body {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    // .blog__text
+
+    &__text {
+        font-size: 18px;
+        line-height: 150%;
+        /* 27/18 */
+        max-width: 770px;
+        display: inline-block;
+    }
+
+    // .blog__button
+
+    &__button {
+        align-self: flex-end;
+        flex: 0 0 auto;
+    }
+
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 48px;
+    }
+
+    &__item {}
+}
+
+.item-blog {
+    background-color: rgba(129, 129, 139, 0.1);
+    border-radius: 24px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+
+    &__header {
+        position: relative;
+    }
+
+    // .item-blog__category
+
+    &__category {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        border-radius: 0 10px 0 0;
+        background-color: rgba(129, 129, 139, 0.5);
+        color: #FFFFFF;
+        font-size: 14px;
+        padding: 10px;
+        line-height: 157.142857%;
+
+        /* 22/14 */
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+    // .item-blog__image
+
+    &__image {
+        position: relative;
+        display: block;
+        padding-bottom: 49.238579%;
+        overflow: hidden;
+
+        /* 194/394 */
+        img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            transition: all 0.3s ease 0s;
+            transform: scale(1.02);
+
+            &:hover {
+                transform: scale(1.05);
+            }
+        }
+    }
+
+    // .item-blog__body
+
+    &__body {
+        padding: 36px 26px;
+    }
+
+    // .item-blog__date
+
+    &__date {
+        color: rgba(129, 129, 139, 0.9);
+        line-height: 150%;
+
+        /* 24/16 */
+        &:not(:last-child) {
+            margin-bottom: 20px;
+        }
+    }
+
+    // .item-blog__title
+
+    &__title {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 135%;
+
+
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        }
+
+        /* 27/20 */
+    }
+
+    // .item-blog__link-title
+
+    &__link-title {
+        color: #ffffff;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+    // .item-blog__text
+
+    &__text {
+        line-height: 150%;
+        /* 24/16 */
+        color: #9C9C9C;
+
+        &:not(:last-child) {
+            margin-bottom: 20px;
+        }
+    }
+
+    // .item-blog__link
+
+    &__link {
+        font-size: 14px;
+        line-height: 157.142857%;
+        /* 22/14 */
+        color: #3D96F4;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
+@media(max-width:1110px) {
+    .blog__items {
+        gap: 20px;
+    }
+
+    .item-blog__body {
+        padding: 25px 15px;
+    }
+}
+
+@media(max-width:767.98px) {
+    .blog {
+        &__body {
+            flex-direction: column;
+        }
+
+        &__button {
+            align-self: flex-start;
+            width: 100%;
+        }
+
+        &__items {
+            grid-template-columns: auto;
+        }
+    }
+}
+
+.page {
+
+    // .page__start
+
+    &__start {
+        padding-top: 100px;
+        margin-bottom: 100px;
+
+        @media(max-width: 991.98px) {
+            padding-top: 50px;
+            margin-bottom: 50px;
+        }
+
+        @media(max-width: 767.98px) {
+            padding-top: 30px;
+            margin-bottom: 30px;
+        }
+    }
+}
+
+.start {
+
+    // .start__container
+
+    &__container {}
+
+    &__body {
+        display: flex;
+        align-items: center;
+        background-color: rgba(129, 129, 139, 0.1);
+        border-radius: 30px;
+        padding: 50px 40px;
+    }
+
+    // .start__column
+
+    &__column {
+        flex: 0 1 50%;
+        text-align: center;
+    }
+
+    // .start__title
+
+    &__title {
+        color: #ffffff;
+        font-size: 32px;
+        font-weight: 400;
+        line-height: 140.625%;
+
+        /* 45/32 */
+        &:not(:last-child) {
+            margin-bottom: 16px;
+        }
+    }
+
+    // .start__text
+
+    &__text {
+        line-height: 150%;
+        /* 24/16 */
+        max-width: 340px;
+        display: inline-block;
+    }
+
+    // .start__actions
+
+    &__actions {
+        display: flex;
+        column-gap: 32px;
+        row-gap: 20px;
+        justify-content: center;
+    }
+
+    // .start__button
+
+    &__button {}
+}
+
+@media(max-width:991.98px) {
+    .start__body {
+        align-items: stretch;
+        flex-direction: column;
+        row-gap: 30px;
+        padding: 20px 15px;
+    }
+
+    .start__title {
+        font-size: 24px;
+    }
+}
+
+@media(max-width:479.98px) {
+    .start__actions {
+        flex-direction: column;
+    }
+}
+
+.footer {
+
+    // .footer__main
+
+    &__main {
+        padding-top: 160px;
+        padding-bottom: 160px;
+
+        @media(max-width: 991.98px) {
+            padding-top: 80px;
+            padding-bottom: 80px;
+        }
+
+        @media(max-width: 767.98px) {
+            padding-top: 40px;
+            padding-bottom: 40px;
+        }
+    }
+
+    // .footer__bottom
+
+    &__bottom {}
+}
+
+.main-footer {
+
+    // .main-footer__container
+
+    &__container {
+        display: grid;
+        grid-template-columns: minmax(auto, 378px) auto auto minmax(auto, 378px);
+        column-gap: 64px;
+    }
+
+    // .main-footer__column
+
+    &__column {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    // .main-footer__logo
+
+    &__logo {
+        display: block;
+    }
+
+    // .main-footer__text
+
+    &__text {
+        line-height: 150%;
+        /* 24/16 */
+    }
+
+    // .main-footer__social
+
+    &__social {}
+
+    // .main-footer__label
+
+    &__label {
+        font-size: 20px;
+        font-weight: 500;
+        color: #FFFFFF;
+        line-height: 120%;
+        /* 24/20 */
+        letter-spacing: 1px;
+    }
+
+    // .main-footer__menu
+
+    &__menu {}
+
+    // .main-footer__subscribe
+
+    &__subscribe {}
+}
+
+.social {
+    display: flex;
+    gap: 16px;
+
+    // .social__link
+
+    &__link {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex: 0 0 36px;
+        height: 36px;
+        border-radius: 50%;
+        border: 1px solid #9C9C9C;
+        transition: border 0.3s ease 0s;
+
+        &:hover {
+            border: 1px solid #565656;
+        }
+    }
+}
+
+.menu-footer {
+
+    // .menu-footer__list
+
+    &__list {
+        display: grid;
+        gap: 24px;
+    }
+
+    // .menu-footer__item
+
+    &__item {}
+
+    // .menu-footer__link
+
+    &__link {
+        line-height: 162.5%;
+        /* 26/16 */
+        color: #9C9C9C;
+
+        &:hover {
+            color: #FFFFFF;
+        }
+    }
+}
+
+.subscribe {
+
+    // .subscribe__text
+
+    &__text {
+        line-height: 150%;
+
+        /* 24/16 */
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        }
+    }
+
+    // .subscribe__form
+
+    &__form {
+        display: flex;
+        gap: 16px;
+    }
+
+    // .subscribe__input
+
+    &__input {
+        border: 1px solid rgba(129, 129, 139, 0.3);
+        border-radius: 30px;
+        background-color: #0D0D11;
+        padding: 14px 32px;
+        font-weight: 400;
+        color: #ffffff;
+        width: 100%;
+
+        &::placeholder {
+            color: #999999;
+        }
+    }
+
+    // .subscribe__button
+
+    &__button {}
+}
+
+.bottom-footer {
+
+    // .bottom-footer__container
+
+    &__container {}
+
+    // .bottom-footer__copy
+
+    &__copy {
+        padding-top: 45px;
+        padding-bottom: 45px;
+        border-top: 1px solid rgba(129, 129, 139, 0.2);
+        text-align: center;
+
+        @media(max-width: 767.98px) {
+            padding-top: 20px;
+            padding-bottom: 20px;
+        }
+    }
+}
+
+@media(max-width:1110px) {
+    .main-footer__container {
+        gap: 45px;
+        grid-template-columns: minmax(auto, 378px) auto auto;
+    }
+
+    .main-footer__column {
+        &:nth-child(1) {
+            grid-column: span 3;
+        }
+    }
+}
+
+@media(max-width:767.98px) {
+    .main-footer__container {
+        gap: 35px;
+        grid-template-columns: auto auto;
+    }
+
+    .main-footer__column:nth-child(1) {
+        grid-column: span 2;
+    }
+
+    .main-footer__column:nth-child(4) {
+        grid-column: span 2;
+    }
+}
+
+@media(max-width:479.98px) {
+    .subscribe__form {
+        flex-direction: column;
+    }
+
+    .main-footer__label {
+        font-size: 17px;
+    }
+
+    .menu-footer__link {
+        font-size: 16px;
     }
 }
